--- a/wit/deps.toml
+++ b/wit/deps.toml
@@ -1,1 +1,1 @@
-common = "https://github.com/jabratech/wit-common/archive/v0.1.1.tar.gz"
+common = "https://github.com/jabratech/wit-common/archive/main.tar.gz"
